# torch-js

./: CMakeLists.txt
lib/: index.ts  torch.d.ts
src/: ScriptModule.cc  ScriptModule.h  Tensor.cc  Tensor.h  constants.cc  constants.h  utils.cc  utils.h
